# keep-presence

./: .gitignore  PROJECT_README.md  README.md  keep-presence.py  pyproject.toml  snapcraft.yaml
.github/: FUNDING.yml
src/: keep-presence.py  setup.py
src/keep_presence/: __main__.py
