[project]
name = "keep_presence"
version = "1.0.7.1"
dependencies = [
    "pynput"
]
authors = [
  { name="carrot69" },
]
description = "Keeps your computer awake by moving the mouse or pressing a key when you step away."
readme = "PROJECT_README.md"
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/carrot69/keep-presence"
"Bug Tracker" = "https://github.com/carrot69/keep-presence/issues"

[project.scripts]
keep-presence = "keep_presence.__main__:main"